--- a/Pages/Characters/Details.cshtml
+++ b/Pages/Characters/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.Character.Show)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Character.Show.Genre)
+            @Html.DisplayFor(model => model.Character.Show.Title)
         </dd>
     </dl>
 </div>
