--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,4 +7,4 @@
 <h1>Welcome</h1>
 
 <a class="nav-link text-dark" asp-area="" asp-page="/Shows/Index">Shows</a>
-<a class="nav-link text-dark" asp-area="" asp-page="/AllCharacters">All Characters</a>
+<a class="nav-link text-dark" asp-area="" asp-page="/Characters/Index">All Characters</a>
