--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Welcome</h1>
+<h1>Welcome To The Character Database</h1>
 
 <a class="nav-link text-dark" asp-area="" asp-page="/Shows/Index">Shows</a>
 <a class="nav-link text-dark" asp-area="" asp-page="/Characters/Index">All Characters</a>
