--- a/Pages/Characters/Index.cshtml
+++ b/Pages/Characters/Index.cshtml
@@ -6,6 +6,16 @@
 }
 <h1>All Characters</h1>
 
+<form asp-page="./Index" method="get">  
+    <div class="form-actions no-color">  
+        <p>  
+            Find by First or Last name: <input type="text" name="SearchString"/>  
+            <input type="submit" value="Search" class="btn btn-default" /> ||  
+            <a asp-page="./Index">Back to full List</a>  
+        </p>  
+    </div>  
+</form>  
+
 <table class="table">
     <thead>
         <tr>
